feat: add v2 phase2 security policy
